[package]
name = "biryani"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
snailquote = "0.3.1"
futures = { version = "0.3.*" }
url = { version = "2", features = [] }
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
